--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>HTML Meta Tag</title>
+      <title><3</title>
       <meta http-equiv = "refresh" content = "0; url = https://www.messenger.com/t/forrestbicker" />
    </head>
    <body>
